testsuite/single/tests/compiler/fail/bad_param2.lpc
void foo() {
    (: $1000 :);
}
